--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,8 @@ jobs:
       - name: login
         uses: docker/login-action@v1
         with:
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
           registry: ghcr.io
       - name: build and push
         uses: docker/build-push-action@v2
