--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,5 +21,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: macrat/squid:latest
+          tags: ghcr.io/macrat/squid:latest
           platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
