--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Build
 on:
   push:
     branches: main
+  schedule:
+    - cron: '25 0 1 * *'
 
 jobs:
   build:
@@ -20,5 +22,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: macrat/squid:latest
+          tags: macrat/squid:latest,macrat/squid:${{ GITHUB_RUN_ID }}
           platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
