--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: generate tags
+        run: echo '::set-output name=TAGS::macrat/squid:latest,macrat/squid:$(date +%Y-%m-%d)'
       - name: build and push
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: macrat/squid:latest,macrat/squid:${{ GITHUB_RUN_ID }}
+          tags: macrat/squid:latest,macrat/squid:${{ steps.generate-tags.outputs.TAGS }}
           platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
