--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,14 @@ jobs:
       - name: login
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: macrat
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: generate tags
+        id: tags
         run: echo '::set-output name=TAGS::macrat/squid:latest,macrat/squid:$(date +%Y-%m-%d)'
       - name: build and push
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: macrat/squid:latest,macrat/squid:${{ steps.generate-tags.outputs.TAGS }}
+          tags: ${{ steps.tags.outputs.TAGS }}
           platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
