--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,17 @@ jobs:
       - name: login GitHub container registry
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: macrat
-          password: ${{ secrets.GHCR_TOKEN }}
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ github.token }}
       - name: generate tags
         id: tags
-        run: 'echo "::set-output name=TAGS::macrat/squid:latest,macrat/squid:$(date +%Y-%m-%d),ghcr.io/macrat/squid:latest,ghcr.io/macrat/squid:$(date +%Y-%m-%d)"'
+        run: |
+          TAGS="macrat/squid:latest"
+          TAGS="${TAGS},macrat/squid:$(date +%Y-%m-%d)"
+          TAGS="${TAGS},docker.pkg.github.com/${{ github.repository }}/squid:latest"
+          TAGS="${TAGS},docker.pkg.github.com/${{ github.repository }}/squid:$(date +%Y-%m-%d)"
+          echo "::set-output name=TAGS::${TAGS}"
       - name: build and push
         uses: docker/build-push-action@v2
         with:
