Separate docker.io and ghcr.io for testing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,16 +23,20 @@ jobs:
           username: macrat
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: generate tags
-        id: tags
+        id: vars
         run: |
-          TAGS="macrat/squid:latest"
-          TAGS="${TAGS},macrat/squid:$(date +%Y-%m-%d)"
-          TAGS="${TAGS},ghcr.io/macrat/squid:latest"
-          TAGS="${TAGS},ghcr.io/macrat/squid:$(date +%Y-%m-%d)"
-          echo "::set-output name=TAGS::${TAGS}"
+          echo "::set-output name=TAG::$(date +%Y-%m-%d)"
       - name: build and push
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ${{ steps.tags.outputs.TAGS }}
+          tags: |
+            macrat/squid:latest,macrat/squid:${{ steps.vars.outputs.TAG }}
+          platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
+      - name: build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: |
+            ghcr.io/macrat/squid:latest,ghcr.io/macrat/squid:${{ steps.vars.outputs.TAG }}
           platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
